Update Terraform instructions and README for Azure-focused standards
- Enhanced Terraform instructions to reflect version 1.13 and Azure-specific best practices, including required providers, optional attributes, and resource naming conventions.
- Added examples for using AzAPI, Azure Key Vault integration, and cost optimization strategies.
- Expanded README to clarify the purpose of the repository and its structure, emphasizing the use of GitHub Copilot in various IDEs.